day 4, part 1: mid refactor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,9 @@ project(AdventOfCode2024)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+add_compile_options(-Wall)
 
 add_subdirectory(day_1)
 add_subdirectory(day_2)
 add_subdirectory(day_3)
+add_subdirectory(day_4)
